#
# setup.cfg
#
# Configure default parameters for the setup.py package distribution 
# command. These defaults are used unless the user explicitly overrides 
# them on the command line.
#
# The following two defaults lessen the chance of an out of date version 
# of a module lurking in the installation directory and giving 
# unexpected results.
#

[metadata]
name = miritools
version = attr: miritools.__version__
description = "MIRI convenience tools"
url = https://github.com/JWST-MIRI/miricap
author = "Christophe Cossou"
author_email = ""
platforms = ["Linux", "Mac OS X"]
license_files = LICENCE

# When building a package ignore the time stamps and rebuild everything.
[build]
force=1

# When installing a package overwrite everything that is already in the 
# installation directory.
[install]
force=1

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[nosetests]
# Look for scripts that are executable
exe=True
with-xcoverage=True
with-xunit=True
cover-package=.
cover-erase=True

[options.data_files]
* =
    LICENCE
    README.adoc

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pytest
    matplotlib
    numpy
    photutils
    astropy
    scipy
    tabulate
